# robot_smart_camera

./: .gitignore  README.md  ai_test.ipynb  frames_2025-01-21_03.35.47.gv  pyproject.toml  requirements.txt  setup.sh  test_agent.py
src/realsense_robot/: CMakeLists.txt  README.md  package.xml  setup.py
src/realsense_robot/config/: detection.rviz  mapping.rviz  mapping_old.rviz  pointcloud.rviz  rtabmap.yaml  rtabmap_odom.yaml
src/realsense_robot/launch/: robot.launch.py
src/realsense_robot/pico_code/: servo_control.py
src/realsense_robot/realsense_robot/: __init__.py  agent_node.py  camera_node.py  detection_node.py  imu_node.py  mapping_node.py  openai_node.py  pico_servo_node.py  pointcloud_node.py  web_interface.py
src/realsense_robot/realsense_robot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/realsense_robot/realsense_robot/ai_agent/: __init__.py  agent_node.py  graph.py
src/realsense_robot/realsense_robot/ai_agent/agents/: __init__.py  base_agent.py  claude_agent.py  ollama_agent.py  openai_agent.py  voice_agent.py
src/realsense_robot/realsense_robot/ai_agent/tools/: detection_tool.py
src/realsense_robot/realsense_robot/static/: index.html
src/realsense_robot/scripts/: agent_node  detection_node  web_interface
