[tool.poetry]
name = "realsense-robot"
version = "0.1.0"
description = "ROS2 package for RealSense camera with RTAB-Map"
authors = ["Zach"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "2.2.1"
torchvision = "0.17.1"
torchaudio = "2.2.1"
ultralytics = "8.3.61"
open3d = ">=0.19.0"
numpy = "<2.0"
opencv-python = ">=4.10.0"
transforms3d = ">=0.4.2"
pyquaternion = ">=0.9.9"
scipy = ">=1.15.1"
llsd = ">=0.1.0"
catkin-pkg = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
