cmake_minimum_required(VERSION 3.8)
project(realsense_robot)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)

install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}
)

install(FILES
  config/mapping.rviz
  config/rtabmap.yaml
  config/rtabmap_odom.yaml
  DESTINATION share/${PROJECT_NAME}/config
)

ament_package() 