<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense_robot</name>
  <version>0.0.1</version>
  <description>RealSense robot package with RTAB-Map integration</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>realsense2_camera</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs_py</depend>
  <depend>rtabmap_ros</depend>
  <depend>rtabmap_odom</depend>
  <depend>rtabmap_slam</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 